--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build"
   ],
   "scripts": {
+    "http-server": "tsc && node build/http-server.js",
     "build": "tsc && node -e \"require('fs').chmodSync('build/index.js', '755')\"",
     "prepare": "npm run build",
     "watch": "tsc --watch",
@@ -19,9 +20,14 @@
   "dependencies": {
     "@google-cloud/local-auth": "^3.0.1",
     "@modelcontextprotocol/sdk": "0.6.0",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "googleapis": "^144.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
     "@types/node": "^20.11.24",
     "typescript": "^5.3.3"
   }
